project(cleet_code)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS(-g -Wall )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(1.sum_of_two_numbers)
add_subdirectory(2.add_two_numbers)
add_subdirectory(3.longest_substring_without_repeating_characters)
add_subdirectory(4.find_the_median_of_two_positive_arrays)
#add_subdirectory(cvptr)
add_subdirectory(5.longest_palindromic_substring)
add_subdirectory(6.zigzag_conversion)
add_subdirectory(7.reverse_integer)
add_subdirectory(8.string_to_integer)
add_subdirectory(9.palindrome_number)
add_subdirectory(10.regular_expression_matching)
add_subdirectory(11.盛最多水的容器)
add_subdirectory(208.trie_tree)
add_subdirectory(211.add_and_search_word)

