project(cleet_code)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS(  -g -Wall  )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(0001.sum_of_two_numbers)
add_subdirectory(0002.add_two_numbers)
add_subdirectory(0003.longest_substring_without_repeating_characters)
add_subdirectory(0004.find_the_median_of_two_positive_arrays)
#add_subdirectory(cvptr)
add_subdirectory(0005.longest_palindromic_substring)
add_subdirectory(0006.zigzag_conversion)
add_subdirectory(0007.reverse_integer)
add_subdirectory(0008.string_to_integer)
add_subdirectory(0009.palindrome_number)
add_subdirectory(0010.regular_expression_matching)
add_subdirectory(0011.盛最多水的容器)
add_subdirectory(0012.整数转罗马数字)
add_subdirectory(0013.罗马数字转整数)
add_subdirectory(0014.最长公共前缀)
add_subdirectory(0015.三数之和)
add_subdirectory(0016.最接近的三数之和)
add_subdirectory(0017.电话号码的字母组合)
add_subdirectory(0018.四数之和)
add_subdirectory(0019.删除链表的倒数第N个节点)
add_subdirectory(0020.有效的括号)
add_subdirectory(0021.合并两个有序链表)
add_subdirectory(0134.加油站)
add_subdirectory(0148.排序链表)
add_subdirectory(0208.trie_tree)
add_subdirectory(0211.add_and_search_word)
add_subdirectory(0222.Count_Complete_Tree_Nodes)
add_subdirectory(0242.有效的字母异位词)
add_subdirectory(0283.移动零)
add_subdirectory(0328.奇偶链表)
add_subdirectory(0402.移掉K位数字)
add_subdirectory(0406.根据身高重建队列)
add_subdirectory(0452.用最少数量的箭引爆气球)
add_subdirectory(0648.单词替换)
add_subdirectory(0867.转置矩阵)
add_subdirectory(0922.按奇偶排序数组II)
add_subdirectory(0977.有序数组的平方)
add_subdirectory(1030.距离顺序排列矩阵单元格)
add_subdirectory(1074.元素和为目标值的子矩阵数量)
add_subdirectory(1122.数组的相对排序)
add_subdirectory(1476.子矩形查询)
add_subdirectory(1535.找出数组游戏的赢家)
add_subdirectory(1552.两球之间的磁力)
add_subdirectory(1588.所有奇数长度子数组的和)
add_subdirectory(1638.统计只差一个字符的子串数目)
add_subdirectory(面试题17.10.主要元素)
add_subdirectory(面试题17.21.直方图的水量)

