project(cleet_code)
cmake_minimum_required(VERSION 2.8)
MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS( -g -Wall  )
#SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(0001.sum_of_two_numbers)
add_subdirectory(0002.add_two_numbers)
add_subdirectory(0003.longest_substring_without_repeating_characters)
add_subdirectory(0004.find_the_median_of_two_positive_arrays)
#add_subdirectory(cvptr)
add_subdirectory(0005.longest_palindromic_substring)
add_subdirectory(0006.zigzag_conversion)
add_subdirectory(0007.reverse_integer)
add_subdirectory(0008.string_to_integer)
add_subdirectory(0009.palindrome_number)
add_subdirectory(0010.regular_expression_matching)
add_subdirectory(0011.container_with_most_water)
add_subdirectory(0012.integer_to_roman)
add_subdirectory(0013.roman_to_integer)
add_subdirectory(0014.longest_common_prefix)
add_subdirectory(0015.three_sum)
add_subdirectory(0016.3sum_closest)
add_subdirectory(0017.letter_combinations_of_phone_number)
add_subdirectory(0018.fourSum)
add_subdirectory(0019.remove_nth_node_from_endof_list)
add_subdirectory(0020.valid_parentheses)
add_subdirectory(0021.merge_two_sorted_lists)
add_subdirectory(0049.GroupAnagrams)
add_subdirectory(0062.UniquePaths)
add_subdirectory(0063.UniquePathsII)
add_subdirectory(0069.Sqrtx)
add_subdirectory(0086.PartitionList)
add_subdirectory(0134.Gas_Station)
add_subdirectory(0148.Sort_List)
add_subdirectory(0164.Maximum_Gap)
add_subdirectory(0208.trie_tree)
add_subdirectory(0211.add_and_search_word)
add_subdirectory(0222.Count_Complete_Tree_Nodes)
add_subdirectory(0239.SlidingWindowMaximum)
add_subdirectory(0242.Valid_Anagram)
add_subdirectory(0268.Missing_Number)
add_subdirectory(0283.Move_Zeroes)
add_subdirectory(0300.LongestIncreasingSubsequence)
add_subdirectory(0328.Odd_Even_Linked_List)
add_subdirectory(0381.Insert_Delete_GetRandom_O_Duplicates_allowed)
add_subdirectory(0387.FirstUniqueCharacterinaString)
add_subdirectory(0393.UTF-8Validation)
add_subdirectory(0402.Remove_K_Digits)
add_subdirectory(0406.Queue_Reconstruction_by_Height)
add_subdirectory(0452.Minimum_Number_of_Arrows_to_Burst_Balloons)
add_subdirectory(0454.fourSumCount)
add_subdirectory(0461.HammingDistance)
add_subdirectory(0477.TotalHammingDistance)
add_subdirectory(0493.ReversePairs)
add_subdirectory(0547.NumberofProvinces)
add_subdirectory(0605.CanPlaceFlowers)
add_subdirectory(0621.TaskScheduler)
add_subdirectory(0648.Replace_Words)
add_subdirectory(0684.RedundantConnection)
add_subdirectory(0720.Longest_Word_in_Dictionary)
add_subdirectory(0738.MonotoneIncreasingDigits)
add_subdirectory(0740.DeleteandEarn)
add_subdirectory(0830.PositionsofLargeGroups)
add_subdirectory(0867.transpose_matrix)
add_subdirectory(0922.Sort_Array_By_Parity_II)
add_subdirectory(0977.SquaresofaSorted_Array)
add_subdirectory(0990.SatisfiabilityofEqualityEquations)
add_subdirectory(1011.CapacityToShipPackagesWithinDDays)
add_subdirectory(1030.Matrix_Cells_in_Distance_Order)
add_subdirectory(1074.number_of_submatrices_thatJ_sum_to_target)
add_subdirectory(1122.Relative_Sort_Array)
add_subdirectory(1310.XORQueriesofaSubarray)
add_subdirectory(1319.NumberofOperationstoMakeNetworkConnected)
add_subdirectory(1370.Increasing_Decreasing_String)
add_subdirectory(1476.Subrectangle_Queries)
add_subdirectory(1535.Find_the_Winner_of_an_Array_Game)
add_subdirectory(1552.Magnetic_Force_Between_Two_Balls)
add_subdirectory(1578.MinimumDeletionCosttoAvoidRepeatingLetters)
add_subdirectory(1579.RemoveMaxNumberofEdgestoKeepGraphFullyTraversable)
add_subdirectory(1584.MinCosttoConnectAllPoints)
add_subdirectory(1588.Sum_of_All_Odd_Length_Subarrays)
add_subdirectory(1638.Count_Substrings_That_Differ_by_One_Character)
add_subdirectory(1734.DecodeXORedPermutation)
add_subdirectory(5243.TuplewithSameProduct)
add_subdirectory(5630.MaximumErasureValue)
add_subdirectory(5642.CountGoodMeals)

add_subdirectory(Interview17.07.BabyNamesLCCI)
add_subdirectory(Interviewquestions17.10.Find_Majority_Element_LCCI)
add_subdirectory(Interviewquestions17.21.Volume_of_Histogram_LCCI)



add_subdirectory(cradix_tree)

